--- a/_config.yml
+++ b/_config.yml
@@ -134,7 +134,7 @@ link-col: "#c8a970"
 hover-col: "#c8a970"
 navbar-col: "#EAEAEA"
 navbar-text-col: "#c8a970"
-navbar-border-col: "#DDDDDD"
+navbar-border-col: "#000"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
