--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,9 @@ author: DKC TEAM
 navbar-links:
   Beranda: "/"
   About DKC: "/about-dkc" 
+  Dokumen Gereja:
+    - Katekismus Gereja Katolik: "/assets/doc/katekismus-gereja-katolik.pdf"
+    - Kitab Hukum Kanonik: "/assets/doc/KHK Buku I - VII.pdf"
 
 ################
 # --- Logo --- #
