--- a/_config.yml
+++ b/_config.yml
@@ -297,6 +297,9 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-toc
+
+gems: [jekyll-paginate, jekyll-sitemap, jekyll-toc]
 
 html_press:
   unquoted_attributes: false
