--- a/_config.yml
+++ b/_config.yml
@@ -297,9 +297,8 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-toc
 
-gems: [jekyll-paginate, jekyll-sitemap, jekyll-toc]
+gems: [jekyll-paginate, jekyll-sitemap]
 
 html_press:
   unquoted_attributes: false
