--- a/_config.yml
+++ b/_config.yml
@@ -276,6 +276,14 @@ defaults:
       layout: "post"
       comments: true  # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
+      toc: true
+      subtitle: ""
+      tags: []
+      author: ""
+      excerpt: ""
+      cover-img: ""
+      thumbnail-img: ""
+
   -
     scope:
       path: "" # any file that's not a post will be a "page" layout by default
